# trantrac

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CRON_SETUP.md  Dockerfile  README.md  entrypoint.sh  justfile  package.json  pyproject.toml  tailwind.config.js
.claude/: settings.local.json
core/: settings.py  urls.py
static/css/: custom.css  source.css  tailwind.css
static/img/: site.webmanifest
templates/: base-simplified.html  base.html
templates/account/: login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/includes/: favico.html  messages.html  modal.html  navbar.html
templates/tailwind/layout/: field_errors.html  help_text.html  select.html
templates/trantrac/: add_category.html  add_subcategory.html  index.html  subcategory_choices.html  transaction_form.html  transaction_ok.html  upload_csv.html  upload_csv_error.html  upload_csv_ok.html  upload_csv_page.html
templates/users/: user_delete.html
tests/: conftest.py  factories.py
tests/core/: test_urls.py
tests/trantrac/: test_context_processors.py  test_crispy_config.py  test_forms.py  test_management_commands.py  test_models.py  test_utils.py  test_views.py
tests/users/: test_forms.py  test_models.py  test_views.py
trantrac/: admin.py  apps.py  context_processors.py  crispy_config.py  forms.py  models.py  urls.py  utils.py  views.py
trantrac/management/commands/: send_monthly_reminder.py
trantrac/migrations/: 0001_initial.py  0002_alter_account_options_alter_category_options.py  0002_categoryusage.py  0003_subcategory.py  0004_subcategory_skip_sheet_save.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_display_name.py
